@@ -5,6 +5,7 @@ systemd-genie (2.3) buster bullseye bookworm sid bionic focal jammy; urgency=med
         * Fixed WSL 1 detection.
         * Added -a/--as-user option to allow shell/command as any user.
         * Added support for Ubuntu 22.04 LTS (Jammy Jellyfish).
+        * Greater robustness against misconfigured hosts files (fixes #247).
         * Miscellaneous fixes.
 
  -- Alistair Young <avatar@arkane-systems.net>  Sun, 06 Mar 2022 13:30:00 -0500
